[gd_scene load_steps=13 format=3 uid="uid://dk2tkf0ldrdy7"]

[ext_resource type="Script" uid="uid://dw8rmdnrmi1sm" path="res://Scenes/Player/player_controller.gd" id="1_k0pio"]
[ext_resource type="Script" uid="uid://budjn4hv2cb7i" path="res://Scenes/Player/camera_controller.gd" id="2_r5hck"]
[ext_resource type="Script" uid="uid://cbfoht08xcyi6" path="res://Scripts/StateMachine/state_machine.gd" id="3_kfrkp"]
[ext_resource type="Script" uid="uid://db8cfnri6k31c" path="res://Scenes/Player/PlayerStates/player_state_idle.gd" id="3_veqsw"]
[ext_resource type="Script" uid="uid://dk5kchaswehre" path="res://Scenes/Player/PlayerStates/player_state_ground_movement.gd" id="5_gym7l"]
[ext_resource type="Script" uid="uid://qbwwfwkdn8g3" path="res://Scenes/Player/debug_panel.gd" id="6_uta3u"]
[ext_resource type="Script" uid="uid://cnbes6qq4k7i7" path="res://Scenes/Player/PlayerStates/player_state_air_movement.gd" id="7_w6ygp"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_t5xx7"]
radius = 0.4
height = 1.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_t5xx7"]
radius = 0.4
height = 1.8

[sub_resource type="Animation" id="Animation_w6ygp"]
resource_name = "crouch"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 0.9, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyCollider:shape:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.8, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodyCollider:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.9, 0), Vector3(0, 0.5, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TempBody:mesh:height")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.8, 1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TempBody:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.9, 0), Vector3(0, 0.5, 0)]
}

[sub_resource type="Animation" id="Animation_icmko"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyCollider:shape:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodyCollider:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.9, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TempBody:mesh:height")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.8]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TempBody:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.9, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wvxe2"]
_data = {
&"RESET": SubResource("Animation_icmko"),
&"crouch": SubResource("Animation_w6ygp")
}

[node name="PlayerController" type="CharacterBody3D"]
script = ExtResource("1_k0pio")

[node name="DebugPanel" type="CanvasLayer" parent="."]
script = ExtResource("6_uta3u")

[node name="StateLabel" type="Label" parent="DebugPanel"]
unique_name_in_owner = true
offset_left = 8.0
offset_top = 8.0
offset_right = 117.0
offset_bottom = 31.0
text = "Current State:"

[node name="TempBody" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
mesh = SubResource("CapsuleMesh_t5xx7")

[node name="BodyCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_t5xx7")

[node name="CameraController" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
script = ExtResource("2_r5hck")

[node name="BobPivot" type="Node3D" parent="CameraController"]
unique_name_in_owner = true

[node name="Camera3D" type="Camera3D" parent="CameraController/BobPivot"]
unique_name_in_owner = true

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("CURRENT_STATE")]
script = ExtResource("3_kfrkp")
CURRENT_STATE = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("3_veqsw")
metadata/_custom_type_script = "uid://5yab3pqy4yl6"

[node name="GroundMovement" type="Node" parent="StateMachine"]
script = ExtResource("5_gym7l")
metadata/_custom_type_script = "uid://5yab3pqy4yl6"

[node name="AirMovement" type="Node" parent="StateMachine"]
script = ExtResource("7_w6ygp")
metadata/_custom_type_script = "uid://5yab3pqy4yl6"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_wvxe2")
}
